Closed
Bug 635768
Opened 9 years ago
Closed 9 years ago
pages print improperly
Categories
(Core :: Printing: Output, defect, major)
Tracking
()
VERIFIED
FIXED
Tracking | Status | |
---|---|---|
blocking2.0 | --- | final+ |
People
(Reporter: wsmwk, Assigned: jfkthame)
References
()
Details
(Keywords: regression, Whiteboard: [hardblocker][4.0b12][4.0b13pre])
Attachments
(7 files)
http://www.rosettatechnologies.com/products-micr-printers-SP8200DNMICR-accessories.asp prints OK in chrome. But in Firefox (4.0) they are badly messed up, even though print preview looks fine.
Comment 1•9 years ago
|
||
Can you print to PDF or PS and attach the resulting file? WORKSFORME on Linux, FWIW. (The printout looks just like Print Preview & isn't obviously busted.) Mozilla/5.0 (X11; Linux i686; rv:2.0b12pre) Gecko/20110220 Firefox/4.0b12pre
Reporter | ||
Comment 2•9 years ago
|
||
"prints" equally badly for me using PDF995 driver / postcript. See attached (I'll have to set up a real postcript driver to a real printer to test postscript.)
Good nightly - 2011-02-19 Bad nightly - 2011-02-20 Pushlog - http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=657c2a92ee2b&tochange=e77f4eda0bad
Assignee | ||
Comment 5•9 years ago
|
||
Looks like this could be a regression from bug 634762. I'll try to reproduce and investigate.
blocking2.0: --- → ?
Assignee | ||
Comment 6•9 years ago
|
||
Confirming that I see similar problems here (on Win7). This only occurs when using GDI fonts; with D2D enabled, or with GDI rendering but DirectWrite explicitly chosen via prefs, the printed rendering is as expected.
Updated•9 years ago
|
Keywords: regression
Version: unspecified → Trunk
Updated•9 years ago
|
blocking2.0: ? → final+
Whiteboard: [hardblocker]
Updated•9 years ago
|
Assignee: nobody → jfkthame
Assignee | ||
Comment 7•9 years ago
|
||
On further testing, the spacing problems _only_ occur when using GDI fonts _and_ using the harfbuzz shaping path, indicating that the problem is specific to the code that gets glyph metrics for harfbuzz via GDI. I thought with the revised DCFromContext code in bug 634762, we could eliminate the use of AutoSelectFont to select the HFONT in gfxGDIFont::GetGlyphWidth, but that does not work reliably when printing; I think this may be related to using a different (non-identity) CTM in the cairo context. One solution would be to retrieve the CTM from cairo and apply it to the metrics we're currently getting, but that would introduce extra conversion to/from floating-point within this function, which does not seem desirable. At this point, think the simplest and lowest-risk fix is to restore AutoSelectFont in GetGlyphWidth, to ensure we're getting metrics from the appropriately scaled Windows font.
Attachment #514442 -
Flags: review?(roc)
Attachment #514442 -
Flags: review?(roc) → review+
Assignee | ||
Comment 8•9 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/88752f2b3088
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 13•9 years ago
|
||
v.fixed Mozilla/5.0 (Windows NT 6.0; rv:2.0b13pre) Gecko/20110228 Firefox/4.0b13pre thanks!
Status: RESOLVED → VERIFIED
Reporter | ||
Comment 15•9 years ago
|
||
what's with the date of "20100101" in the buildid of these dupes from 4.0b12?
Assignee | ||
Comment 16•9 years ago
|
||
See http://hacks.mozilla.org/2010/09/final-user-agent-string-for-firefox-4/, in particular point 6: "The Gecko build date in the “Gecko/yyyymmdd” token has been frozen to 20100101 for Firefox releases."
Comment 29•9 years ago
|
||
I’ve a feeling my latest bug is related. When printing to my Epson Stylus Photo 830U, I notice that the ligatures (e.g. fi) are missing and replaced with a dot. When printing the same page (http://lucire.com) to PDF, the spacing goes haywire. The fonts that Firefox is accessing are PostScript Type 1s. When printing a page using OpenType fonts (e.g. http://autocade.net), I continue to have missing glyphs—again the ligatures and, in this case, a special Th ligature that is in the OpenType tables to replace the T–h combination.
Comment 30•9 years ago
|
||
The build is one of the nightlies from, say, two nights ago. Attaching PDFs in next messages.
Comment 31•9 years ago
|
||
Note: fonts on the page are PostScript, though header and footer font is OpenType.
Comment 32•9 years ago
|
||
Fonts appearing here are OpenType and TrueType. Note: the output font in the PDF does not match the page one, which is TrueType.
Reporter | ||
Comment 34•9 years ago
|
||
(In reply to comment #31) > Created attachment 517661 [details] > Printing lucire.com to PDF—spacing is haywire this example matches this bug. but you have probably noted the nightly builds were patched as of 2011-02-24. so if your build is from 2 nights ago then some aspec of this problem remains. can't speak for the other example. please reconfirm and post date of your build
Severity: normal → major
Whiteboard: [hardblocker] → [hardblocker][4.0b12][4.0b13pre]
Comment 35•9 years ago
|
||
Hi Wayne: I’m on what Minefield claims is current—even though I downloaded on the 6th, the version is 4.0b13pre (2011-03-05).
Comment 36•9 years ago
|
||
Please file new bugs for any issues that are still present.
Assignee | ||
Comment 39•9 years ago
|
||
(In reply to comment #34) > (In reply to comment #31) > > Created attachment 517661 [details] > > Printing lucire.com to PDF—spacing is haywire > > this example matches this bug. but you have probably noted the nightly builds > were patched as of 2011-02-24. so if your build is from 2 nights ago then some > aspec of this problem remains. can't speak for the other example. please > reconfirm and post date of your build I can confirm this happens with a PS Type 1 font in a current build. Although the symptoms look the same as this bug, the underlying cause must be different as it does not depend on the choice of harfbuzz vs platform shaping, and applies only to Type 1 fonts and not TT/OT fonts. I've filed bug 640528 about this issue.
Comment 42•9 years ago
|
||
I got some reports from users there were still problems only in Windows XP. Please check out other languages in Windows XP.
Comment 43•9 years ago
|
||
This error remains in FF4.0 on WinXP. For example, see http://agile.egloos.com/5493814 and its PDF output to compare. Notice that excessive spaing between characters in the comment/traceback area on the left and the right column.
Comment 45•8 years ago
|
||
Comment 46•8 years ago
|
||
See attachment 593051 [details]. I am still experiencing this issue.
I'm on ubuntu 11.10, using firefox Aurora 11.0a2 (2012-01-26)
Comment 47•8 years ago
|
||
Please file a new bug for that.
You need to log in
before you can comment on or make changes to this bug.
Description
•