bug 635768 - restore explicit font selection in gfxGDIFont::GetGlyphWidth to fix spacing issues when printing. r=roc a=blocker